--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pet Spoon Game</title>
-  <style>
-    body {
-      width: 400px;
-      height: 500px;
-      margin: 0;
-      padding: 20px;
-    }
-    
-    
-    #died {
-        display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pet Spoon Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="container">
-  <h1 id="clicks">Pet spoon</h1>
-  <img src="https://m.media-amazon.com/images/I/514nTHwlFnL.jpg" alt="spoon" height="100" width="150">
-  <p id="info">health: 100 | hunger: 100</p>
-  <br>
-  <button id="feed">Feed</button>
-</div>
-
-<h1 id="died">Pet spoon died</h1>
-
-
-  <script type="module" src="dist/game.js"></script>
+        <h1 id="clicks">Pet Spoon</h1>
+        <img src="img/spoon.png" alt="spoon" height="100" width="100">
+        <p id="info">Health: 100 | Hunger: 100</p>
+        <br>
+        <button id="feed">Feed</button>
+        <div id="feedwhat">
+            <h2>Feed Pet Spoon</h2>
+            <button id="pizza">Pizza</button>
+            <button id="donut">Donut</button>
+        </div>
+    </div>
+    <h1 id="died">Pet Spoon Died</h1>
+    <script type="module" src="dist/game.js"></script>
 </body>
+
 </html>
